--- a/assignment3.html
+++ b/assignment3.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -23,9 +22,8 @@
     uniform mat4 modelViewMatrix;
     uniform mat4 projectionMatrix;
 
-    void main()
-    {
-    gl_Position = projectionMatrix*modelViewMatrix*vPosition;
+    void main(){
+        gl_Position = projectionMatrix*modelViewMatrix*vPosition;
     }
 </script>
 
@@ -35,10 +33,8 @@
 
     uniform vec4 fColor;
 
-    void
-    main()
-    {
-    gl_FragColor = fColor;
+    void main(){
+        gl_FragColor = fColor;
     }
 </script>
 
@@ -53,6 +49,5 @@
     <canvas id="gl-canvas" width="800" height="500">
         Oops ... your browser doesn't support the HTML5 canvas element
     </canvas>
-
 </body>
 </html>
