--- a/assignment3.html
+++ b/assignment3.html
@@ -1,20 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-<p> </p>
-<button id="Button1">Increase Near and Far</button>
-<button id="Button2">Decrease Near and Far</button>
-<button id="Button3">Increase R</button>
-<button id="Button4">Decrease R</button>
-
-<p> </p>
-<button id="Button5">Increase theta</button>
-<button id="Button6">Decrease theta</button>
-<button id="Button7">Increase phi</button>
-<button id="Button8">Decrease phi</button>
-<p> </p>
-
-
 <script id="vertex-shader" type="x-shader/x-vertex">
 
     attribute  vec4 vPosition;
@@ -45,9 +31,72 @@
 <script type="text/javascript" src="buckyball.js"></script>
 <script type="text/javascript" src="assignment3.js"></script>
 
+<style>
+    body {
+        background: #808080;
+        width: 100%;
+        height: 100%;
+        margin: 0px;
+        padding: 0px;
+    }
+
+    #info {
+        width: 801px;
+        height: 801px;
+        padding-top: 0px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        font-family: Arial;
+        color: #FFFFFF;
+    }
+
+    h1 {
+        margin-bottom: 0px;
+    }
+
+    h3 {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    h5 {
+        margin-top: 0px;
+        margin-bottom: 20px;
+    }
+
+    #buttons {
+        margin-top: 10px;
+    }
+
+    button {
+        margin-right: 35px;
+        padding: 5px;
+    }
+</style>
+
+
+
 <body>
-    <canvas id="gl-canvas" width="800" height="500">
-        Oops ... your browser doesn't support the HTML5 canvas element
-    </canvas>
+    <div id="info">
+        <h1>CS371 Assignment 3: A Bouncing BuckyBall Being Sucked Into a Moebius Band</h1>
+        <h3>Colin Loomans and Trever Gannon</h3>
+        <h5>GGW Points: </h5>
+
+        <canvas id="gl-canvas" width="800" height="500">
+            Oops ... your browser doesn't support the HTML5 canvas element
+        </canvas>
+
+        <div id="buttons">
+            <button type="button" id="Button1">Increase Near and Far</button>
+            <button type="button" id="Button2">Decrease Near and Far</button>
+            <button type="button" id="Button3">Increase R</button>
+            <button type="button" id="Button4">Decrease R</button>
+            <button type="button" id="Button5">Increase theta</button>
+            <button type="button" id="Button6">Decrease theta</button>
+            <button type="button" id="Button7">Increase phi</button>
+            <button type="button" id="Button8">Decrease phi</button>
+        </div>
+    </div>
 </body>
 </html>
