Added comments on line 90 and 189 in assignment3.js file to explain what needs to be done for outlines

--- a/assignment3.html
+++ b/assignment3.html
@@ -48,7 +48,7 @@
         margin-right: auto;
         text-align: center;
         font-family: Arial;
-        color: #FFFFFF;
+        color: #000000;
     }
 
     h1 {
