Added options for GGW, made lots of progress on outlines

--- a/assignment3.html
+++ b/assignment3.html
@@ -81,7 +81,9 @@
     <div id="info">
         <h1>CS371 Assignment 3: A Bouncing BuckyBall Being Sucked Into a Moebius Band</h1>
         <h3>Colin Loomans and Trever Gannon</h3>
-        <h5>GGW Points: </h5>
+        <h5>GGW Points: We added an option for the Bucky Ball to disappear into the Moebius Band, toggle this feature by pressing "D". We also added a random color option for the Bucky Ball and Moebius Band, toggle this feature by pressing "R".</h5>
+
+        <div id="disappearing">NOT DISAPPEARING</div>
 
         <canvas id="gl-canvas" width="800" height="500">
             Oops ... your browser doesn't support the HTML5 canvas element
